# reimagining-iterfaces

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml
src/ambient_chat/: __init__.py
src/backend/: config.py  main.py
src/backend/models/: database.py
src/backend/personas/: definitions.py
src/backend/services/: mystery_mode.py  persona_engine.py  room_manager.py
src/frontend/src/: App.css  App.tsx  index.css
src/frontend/src/components/: ChatRoom.css  ChatRoom.tsx  MatrixRain.css  MatrixRain.tsx  MessageInput.css  MessageInput.tsx  MessageList.css  MessageList.tsx  PersonaPanel.css  PersonaPanel.tsx  RoomList.css  RoomList.tsx
src/frontend/src/services/: api.ts  websocket.ts
src/frontend/src/types/: index.ts
src/frontend/src/utils/: dynamicGradient.ts  personaColors.ts
