[project]
name = "ambient-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Soof Golan", email = "hi@soofgolan.com" }
]
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.121.2",
    "greenlet>=3.2.4",
    "pydantic-ai>=1.18.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
